bug: border not showing for card

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,17 @@ body {
     line-height: 37px;
     padding: 23px;
 }
+#primary-links{
+    height:55px;
+    line-height:55px;
+}
+#primary-links li{
+    display:inline;
+}
+#primary-links ul{
+    padding:0;
+    margin:0;
+}
 #main{
     margin-left: auto;
     margin-right: auto;
@@ -20,14 +31,31 @@ body {
 }
 
 #sidebar{
-    max-width: 367px;
+    max-width: 368px;
+    padding-left:130px;
+    padding-right:19px;
+    padding-top: 16px;
+    float: left;
+    font-size: 11px;
+    line-height: 18px;
 }
 
-h1 {
-    font-size: 45px;
-    line-height: 70px;
-    margin-bottom: 37px;
+#sidebar h1{
+    font-size: 23px;
+    line-height: 35px;
+    margin-bottom: 18px;
+}
+
+#content h1 {
+    font-size: 33px;
+    line-height: 51px;
+    margin-bottom: 27px;
     color: goldenrod;
+}
+
+#footer{
+    clear:both;
+    text-align: center;
 }
 
  h2 {
@@ -48,3 +76,6 @@ h1 {
     font-weight: bold;
     margin-bottom: 9px;
 }
+div.card{
+    border:goldenrod 1px;
+ }
